1-all-in-one/drupal-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"drupal-db"}]'
  labels:
    app: drupal-app
    app.kubernetes.io/component: drupal-app
    app.kubernetes.io/instance: drupal-app
    app.kubernetes.io/name: drupal-app
    app.kubernetes.io/part-of: drupal-wxt
    app.openshift.io/runtime: drupal
  name: drupal-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: drupal-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: drupal-app
        deploymentconfig: drupal-app
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/all-in-one-test/drupal-wxt:latest
          imagePullPolicy: Always
          name: drupal-app
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /opt/app-root/src/data
              name: drupal-data
            - mountPath: /opt/app-root/src/html/sites
              name: drupal-data
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: '1'
              memory: 1Gi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
        - name: drupal-data
          persistentVolumeClaim:
            claimName: drupal-data
