1-all-in-one/drupal-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-db
spec:
  ports:
    - name: postgresql
      port: 5432
  selector:
    name: drupal-db
