1-all-in-one/drupal-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: drupal-app
    app.kubernetes.io/component: drupal-app
    app.kubernetes.io/instance: drupal-app
    app.kubernetes.io/part-of: drupal-wxt
  name: drupal-app
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: drupal-app
    weight: 100
  wildcardPolicy: None
